Fix bug in the movie description page  on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -11,6 +11,11 @@
     .movie-poster-explanation {
         margin-bottom: 20px;
         max-width: 300px;
+        width: 100%;
+    }
+
+    .movie-description-container {
+        padding: 0;
     }
 
     .movie-description-container h2 {
@@ -28,7 +33,20 @@
     }
 }
 
+@media (max-width: 500px){
+    .movie-description-overview{
+        text-align: center;
+    }
+}
+
 @media (max-width: 400px) {
+    .main-page {
+        padding: 20px 5px;
+    }
+
+    .movie-description-container h2 {
+        font-size: 35px;
+    }
 
     .tmdb-logo {
         margin-top: 10px;
